# xtalgrowth

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  CmakeLists.txt  Makefile.am  Meson-memo.ja  README  README-en  README-ja  README.en  README.ja  README.md  configure.ac  dot.htaccess  index.en.html  index.es.html  index.html  index.ja.html  index.var  meson.build.in  style.css  xtalgrowth.1  xtalgrowth.1.in
.github/workflows/: main.yml  pages.yml
figures/: example.ps
src/: .gitignore  CMakeLists.txt.in  CmakeLists.txt.in  FindPOPT.cmake  GrowthParameters.h  Makefile.am  PostScript.c  PostScript.h  PostScript_eps.c  PostScript_eps.h  PostScript_memo.c  PostScript_memo.h  WASMMakefile  WASMsim.c  Xsim.c  Xsim.h  againagain.sh  certification.doc  certification.eps  hashpjw.c  hashpjw.h  marsaglia.c  marsaglia2d.c  marsaglia2d.gp  meson.build.in  parse_opt.c  parse_opt.h  pjw.c  rand_ary.c  rand_ary.h  sim_core.c  sim_core.h  template.html  uni64.c  uni64.h  wasm.html  xtalgrowth.c  xtalgrowth.h  xtalgrowth_cocoa.m
src/wasm/: WASMsim.c  template.html
